Revert "Gtk+-3.20 all themes: fix redraw issue with yelp"
This reverts commit 5923eed2cfce3d15529f43b3cee47787bf4b6ee7.

Sadly, this breaks scrollbar buttons in mozilla apps and OpenOffice

--- a/desktop-themes/Green-Submarine/gtk-3.0/scrollbar.css
+++ b/desktop-themes/Green-Submarine/gtk-3.0/scrollbar.css
@@ -12,21 +12,6 @@ scrollbar {
     -GtkScrolledWindow-scrollbar-spacing: 0;
 }
 
-/* workarround for broken yelp, w/o that yelp window have redraw issues
-   for displaying the horizontal scrollbar,
-   probably an issue with webkitgtk4 or yelp */
-scrollbar.horizontal {
-	-GtkScrollbar-has-backward-stepper: false;
-	-GtkScrollbar-has-forward-stepper: false;
-
-}
-/* override for normal applications */
-scrolledwindow > scrollbar.horizontal {
-	-GtkScrollbar-has-backward-stepper: true;
-	-GtkScrollbar-has-forward-stepper: true;
-
-}
-
 /* broken firefox ignore background of trough */
 scrollbar.horizontal {
     background-image: -gtk-gradient (linear, left top, right top,
