--- a/desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets.css
@@ -2191,21 +2191,6 @@ scrollbar {
     border-image: none;
 }
 
-/* workarround for broken yelp, w/o that yelp window have redraw issues
-   for displaying the horizontal scrollbar,
-   probably an issue with webkitgtk4 or yelp */
-scrollbar.horizontal {
-	-GtkScrollbar-has-backward-stepper: false;
-	-GtkScrollbar-has-forward-stepper: false;
-
-}
-/* override for normal applications */
-scrolledwindow > scrollbar.horizontal {
-	-GtkScrollbar-has-backward-stepper: true;
-	-GtkScrollbar-has-forward-stepper: true;
-
-}
-
 scrollbar.vertical {
     border-width: 0px 0px 0px 1px;
     min-width: 14px;
